--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,12 @@ h1 {
 
 h2 {
     text-align: center;
-    margin: 10rem auto;
+    margin-top: 10rem;
+    margin-bottom: 4rem;
     position: relative;
     font-size: 3.6rem;
+
+    color: #2B2B2B;
 }
 
 h2:before {
@@ -57,9 +60,7 @@ h2:after {
 .first-content,
 .second-content,
 .third-content,
-.fourth-content,
-.fifth-content,
-.sixth-content {
+.fourth-content {
     padding-bottom: 10rem;
 }
 
@@ -123,6 +124,7 @@ video {
   margin: 1rem auto;
   font-size: 1.6rem;
   z-index: 1000;
+  color: #2B2B2B;
 
   transition: all 3s;
   scroll-behavior: smooth;
@@ -186,18 +188,33 @@ video {
     text-align: right;
 }
 
+#first,
+#third
+ {
+  filter: drop-shadow(0 3px 20px rgba(180, 163, 126, 0.6));
+ 
+}
+
 
 .first-content,
-.third-content,
-.sixth-content {
+.third-content{
   /*   background: url("/assets/img/paperboard-yellow-texture.jpg") center center; */
-    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 90%);
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 95%);
     padding-top: 2rem;
     padding-bottom: 20rem;
     /* background-color: #FBEBE2; */
     /* background-color: #FAF2E8; */
-    filter: drop-shadow(0 6px 10px #000);
+ 
     background-color: #EDE4D1;
+}
+
+.first-content-element,
+.third-content-element,
+.fourth-content-element-item {
+  background-color: #FAF2E8;
+  border-radius: 2rem;
+  
+  box-shadow: 0 2px 2px 0 rgba(161, 143, 119, 0.4), 0 3px 1px -2px rgba(161, 143, 119, 0.4), 0 1px 5px 0 rgba(161, 143, 119, 0.4);
 }
 
 .first-content-element {
@@ -205,9 +222,6 @@ video {
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(3,1fr);
     align-items: center;
-
-    background-color: #FAF2E8;
-    border-radius: 2rem;
 }
 
 .first-content-element-items {
@@ -230,6 +244,8 @@ video {
     height: 16rem;
     object-fit: cover;
     border-radius: 50%;
+
+    box-shadow: -10px -10px 20px rgba(206, 195, 172, 0.6);
 }
 
 .first-content-element-item-img {
@@ -497,11 +513,6 @@ video {
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-
-    background-color: #FAF2E8;
-    border-radius: 2rem;
-
-    /* z-index: 1; */
 }
     
 .third-content-element-card {
@@ -706,9 +717,10 @@ grid-row: 8;
     margin: auto;
 
     align-items: center;
-    background-color: #FAF2E8;
-    border-radius: 2rem;
-    /* max-width: 20rem; */
+}
+
+.fourth-content-element-item img {
+  border-radius: 2rem 0 0 2rem;
 }
 
 .fourth-content-element-item-group {
@@ -720,7 +732,7 @@ grid-row: 8;
 }
 
 .fourth-content-element-item figure figcaption {
-  padding: 5rem 0;
+  padding: 4rem 0;
 }
 
 .fourth-content-element-name {
@@ -836,9 +848,13 @@ grid-row: 8;
   /***********************************************************************
   ************************* FIFTH CONTENT ********************************
   ************************************************************************/
-.fifth-content{
-  background-color: #FBEBE2;
+  #fifth {
+    filter: drop-shadow(0 1px 10px rgba(61, 161, 131, 0.8));
+  }
+  .fifth-content{
+  background-color: #53c4a2;
   padding-top: 2rem;
+  padding-bottom: 4rem;
 
   clip-path: polygon(50% 15%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
