--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ video {
 #siteWrapper header {
   height: max-content;
 
-  background-color: #53c4a2;
+  background-color: #7fd8bd;
   /* background-color: #FBEBE2; */
   line-height: 1.2;
 
@@ -347,6 +347,10 @@ video {
     }
   }
   /* modales */
+
+  .simple-modal-title{
+    margin-bottom: 4rem;
+  }
   .simple-modal,
   .simple-animated-modal {
     position: fixed;
@@ -405,7 +409,7 @@ video {
   .simple-modal-close,
   .simple-animated-modal-close {
     float: right;
-    background: #128197;
+    background: #2fa380;
     border-radius: 1em;
     color: #fff;
     border: 0;
@@ -510,9 +514,11 @@ video {
 
 .third-content-element {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(200px, auto);
+
+    justify-items: center;
 }
     
 .third-content-element-card {
@@ -538,44 +544,49 @@ video {
 .scene {
   width: 15rem;
   height: 15rem;
-  border: 1px solid #CCC;
+  
   margin: 40px 0;
   perspective: 600px;
   z-index: 1;
 }
 .scene:nth-child(1) {
-  grid-column:  2;
-  grid-row: 2 / 4;
+  grid-column:  2/4;
+  grid-row: 1 / 3;
 }
 
 .scene:nth-child(2) {
-  grid-column:  3;
+  grid-column:  4;
 grid-row: 3 / 5;
 }
 
 .scene:nth-child(3) {
-  grid-column: 4;
-grid-row: 1 / 3;
+  grid-column: 6/8;
+grid-row: 2 / 4;
 }
 
 .scene:nth-child(4) {
-  grid-column: 2 / 4;
-grid-row: 5/7;
-}
-
-.scene:nth-child(5) {
-  grid-column: 4;
-grid-row: 6/8;
-}
-
-.scene:nth-child(6) {
-  grid-column: 4;
+  grid-column: 2;
 grid-row: 4/6;
 }
 
+.scene:nth-child(5) {
+  grid-column: 6;
+grid-row: 5/7;
+}
+
+.scene:nth-child(6) {
+  grid-column: 3/5;
+grid-row: 6/8;
+}
+
 .scene:nth-child(7) {
-  grid-column: 3/4;
-grid-row: 8;
+  grid-column: 3;
+  grid-row: 8;
+}
+
+.scene:nth-child(8) {
+  grid-column: 5/7;
+grid-row: 7/9;
 }
 
 .card {
@@ -610,7 +621,7 @@ grid-row: 8;
 
 
 #card1 .card__face--front {
-  background-color: #B800F0;
+  background-color: #a244be;
 }
 
 #card2 .card__face--front  {
@@ -630,11 +641,19 @@ grid-row: 8;
 }
 
 #card6 .card__face--front {
-  background-color: #070916;
+  background-color: #40424d;
 }
 
 #card7 .card__face--front {
-  background-color: #f0bc00e3;
+  background-color: #ecbb06e3;
+}
+
+#card8 .card__face--front {
+  background-color: #79cfb5;
+}
+
+#card8 .card__face--back {
+  background-color: #FBEBE2;
 }
 
 .card__face--back {
@@ -648,21 +667,26 @@ grid-row: 8;
   overflow: hidden;
   /* padding: 5rem; */
   z-index: 1000;
+
+  width: 40rem;
+  height: 40rem;
+  padding: 5rem;
+  margin: auto;
 }
 
-.card__face--back:hover,
+/* .card__face--back:hover,
 .card__face--back:active {
   width: 40rem;
   height: 40rem;
   padding: 5rem;
   margin: auto;
   z-index: 1;
-}
+} */
 
 .card-surprise-box {
   filter: drop-shadow(-5px 6px 10px rgb(192, 192, 192));
-  grid-column: 2/5;
-  grid-row: 9/15;
+  grid-column: 2/6;
+  grid-row: 3/6;
 }
 
 .card-surprise {
@@ -852,11 +876,11 @@ grid-row: 8;
     filter: drop-shadow(0 1px 10px rgba(61, 161, 131, 0.8));
   }
   .fifth-content{
-  background-color: #53c4a2;
+  background-color: #7fd8bd;
   padding-top: 2rem;
   padding-bottom: 4rem;
 
-  clip-path: polygon(50% 15%, 100% 0, 100% 100%, 0 100%, 0 0);
+  clip-path: polygon(50% 20%, 100% 30px, 100% 100%, 0px 100%, 0px 30px);
 }
 .fifth-content-element {
     display: flex;
