--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,6 +19,10 @@ body {
     margin: auto;
 }
 
+::selection {
+  background-color: rgba(127, 216, 189, .6);
+}
+
 h1 {
   font-size: 3.2rem;
 }
@@ -25,6 +30,7 @@ h1 {
 .h1-subtitle {
   font-size: 2rem;
   font-weight: bold;
+
 }
 
 h2 {
@@ -62,6 +68,7 @@ h2:after {
 .third-content,
 .fourth-content {
     padding-bottom: 10rem;
+    scroll-behavior: smooth;
 }
 
 img,
@@ -96,6 +103,18 @@ video {
   width: 80%;
   margin: auto;
 }
+
+#headerTop a {
+  
+  text-decoration: none;
+  color: inherit;
+}
+
+#headerTop .h1-subtitle:hover{
+  border-bottom: 1px dashed #1f2979;
+  width: max-content;
+}
+
 #siteWrapper {
   margin-top: -80px;
 }
@@ -126,7 +145,6 @@ video {
   z-index: 1000;
   color: #2B2B2B;
 
-  transition: all 3s;
   scroll-behavior: smooth;
 }
 .nav-content li a {
@@ -135,14 +153,17 @@ video {
   padding-left: 0;
   color: inherit;
 
-  transition: all 3s;
   scroll-behavior: smooth;
 }
 
 .nav-content li a:hover,
 .nav-content li a:active {
   color: #070916;
-  text-decoration: underline;
+  padding: .5rem;
+  border-radius: .5rem;
+  border: 1px dashed #1f2979;
+
+  transition: all 2s;
 
 }
 
@@ -519,6 +540,8 @@ video {
     grid-auto-rows: minmax(200px, auto);
 
     justify-items: center;
+
+    position: relative;
 }
     
 .third-content-element-card {
@@ -619,7 +642,6 @@ grid-row: 7/9;
   justify-content: center;
 }
 
-
 #card1 .card__face--front {
   background-color: #a244be;
 }
@@ -660,7 +682,7 @@ grid-row: 7/9;
   background: #fff;
   color: #000;
   font-size: 1.6rem;
-  border: 1px solid #000;
+  border: 1px solid #FBEBE2;
   transform: rotateY(180deg);
   transition : all ease-in-out 1s;
   z-index: 1;
@@ -668,35 +690,62 @@ grid-row: 7/9;
   /* padding: 5rem; */
   z-index: 1000;
 
+  filter: drop-shadow(-3px 6px 20px rgba(238, 204, 185, 0.6));
+
   width: 40rem;
   height: 40rem;
   padding: 5rem;
   margin: auto;
 }
 
-/* .card__face--back:hover,
-.card__face--back:active {
-  width: 40rem;
-  height: 40rem;
-  padding: 5rem;
-  margin: auto;
-  z-index: 1;
-} */
-
 .card-surprise-box {
-  filter: drop-shadow(-5px 6px 10px rgb(192, 192, 192));
-  grid-column: 2/6;
-  grid-row: 3/6;
+  filter: drop-shadow(-3px 10px 20px rgb(192, 192, 192));
+  grid-column: 2/8;
+  margin-bottom: 4rem;
+
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+
+  animation: shake 2s linear infinite;
+}
+@-webkit-keyframes shake {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	100% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
 }
 
 .card-surprise {
   -webkit-clip-path: polygon(100% 0, 0 0, 50% 100%);
   clip-path: polygon(100% 0, 0 0, 50% 100%);
-  background-color: #FBEBE2;
+  /* background-color: #FBEBE2; */
   border-radius: 1rem;
-  width: auto;
-  height: 60rem;
+  width: 60rem;
+  height: 40rem;
   margin-bottom: 2rem;
+  background: linear-gradient(-45deg, #ecbb06e3, #1f2979, #54ddb4, #79cfb5);
+  background-size: 400% 400%;
+ 
+  animation: gradient 15s ease infinite;
+}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 
@@ -886,6 +935,28 @@ grid-row: 7/9;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    text-align: center;
+}
+
+.fifth-content-element li {
+  display: flex;
+  flex-direction: column;
+}
+
+.fifth-content-element-btn {
+  background-color: #fff;
+  border: 2px dashed #1f2979;
+  padding: 2rem;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+  text-decoration: none;
+  color: #070916;
+}
+
+.fifth-content-element-btn:hover {
+  background-color: #1f2979;
+  border: 3px dashed #2fa380;
+  color: #fff;
 }
 
  /*  Small devices (landscape phones, less than 768px) */
