modif du css responsive

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   height: 100%;
   margin: 0;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -326,7 +327,8 @@ video {
 /*  Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 767.98px) { 
   .first-content-element{
-    grid-template-columns: repeat(2,1fr);
+    display: flex;
+    flex-direction: column;
   }
 
   .first-content-element-items {
@@ -694,7 +696,7 @@ grid-row: 7/9;
 
 @media (max-width: 767.98px) { 
   .third-content-element {
-    grid-template-columns: repeat(auto-fit, minmax(30px, 1fr) );
+    grid-template-columns: repeat(auto-fit, minmax(25px, 1fr) );
   }
 }
 
@@ -805,7 +807,10 @@ grid-row: 7/9;
     padding: 1rem;
     z-index: 1;
     overflow: visible;
-    border-radius: 0;
+  }
+
+  .card__face--back img {
+    overflow: hidden;
   }
 }
 
@@ -855,6 +860,15 @@ grid-row: 7/9;
 		background-position: 0% 50%;
 	}
 }
+
+@media (max-width: 767.98px) { 
+  
+  .card-surprise {
+    width: 30rem;
+    height: 20rem;
+  }
+  
+  }
 
 
 /****************
@@ -985,21 +999,7 @@ grid-row: 7/9;
 
 /*  Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) { 
-  .first-content-element{
-    grid-template-columns: repeat(3,1fr);
-  }
-
-  .first-content-element-items {
-    width: max-content;
-  }
-
-  .first-content-element-img-item {
-    display: none;
-  }
-
-  .first-content-element-item-text {
-    grid-template-columns: 1fr;
-  }
+ 
 
   
 
@@ -1116,6 +1116,9 @@ width: 20rem;
 .fifth-content-element {
   flex-direction: column;
 }
+.fifth-content-element li {
+  margin: 2rem;
+}
 
 }
 
@@ -1148,5 +1151,14 @@ footer {
   text-decoration: none;
   border-bottom: 2px dashed #1f2979;
 }
+
+@media (max-width: 767.98px) { 
+  
+  .footer-items {
+    flex-direction: column;
+    height: auto;
+  }
+  
+  }
 
 
